Update dashboard UI, freight details, and HTTPS toggle

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 FLASK_APP=run.py
 FLASK_ENV=development
+FLASK_USE_HTTPS=1
 SECRET_KEY=your-secret-key-here-change-in-production
 JWT_SECRET=your-jwt-secret-key-here
 DATABASE_URL=mssql+pyodbc://username:password@server/database?driver=ODBC+Driver+17+for+SQL+Server
